5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1618_2919.log
== TEST (2019-04-02 10:09:32) 
-- CODE:
g1= float(input())
g2= float(input())
g3= float(input())
g4= float(input())
-- OUTPUT:
10.793225305981728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:11:53) 
-- CODE:
g1= float(input("primeiro"))
g2= float(input("segundo"))
g3= float(input("terceiro"))
g4= float(input("quarto"))
m= ()
-- OUTPUT:
10.793225305981728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:14:32) 
-- CODE:
g1= float(input("primeiro"))
g2= float(input("segundo"))
g3= float(input("terceiro"))
g4= float(input("quarto"))
m= med(g1+g2+g3+g4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    m= med(g1+g2+g3+g4)
NameError: name 'med' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:36) 
-- CODE:
g1= float(input("primeiro"))
g2= float(input("segundo"))
g3= float(input("terceiro"))
g4= float(input("quarto"))
m=(g1+g2+g3+g4)/4
print(round(m), 2)
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:17:36) 
-- CODE:
g1= float(input("primeiro"))
g2= float(input("segundo"))
g3= float(input("terceiro"))
g4= float(input("quarto"))
m=(g1+g2+g3+g4)/4
print(round(m ,2))
-- OUTPUT:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:18:05) 
-- CODE:
g1= float(input("primeiro"))
g2= float(input("segundo"))
g3= float(input("terceiro"))
g4= float(input("quarto"))
m=(g1+g2+g3+g4)/4
print(round(m ,2))
-- EXECUTION TIME:
0.126359
-- TEST CASE 1:
---- input:
1.78
1.56
1.62
1.74
---- correct output:
1.68
---- user output:
1.68
-- TEST CASE 2:
---- input:
1.52
1.53
1.51
1.8
---- correct output:
1.59
---- user output:
1.59
-- TEST CASE 3:
---- input:
1.85
1.9
1.72
1.86
---- correct output:
1.83
---- user output:
1.83
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
